--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body{
     margin: 0;
     padding: 0;
     background-image: url(Ina.png);
-    background-size: 1280px;
+    background-size: cover;
+    background-repeat: no-repeat;
     font-family: sans-serif;
 }
 
